--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "puppeteer": "^22.8.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --maxWorkers=1"
   },
   "jest": {
     "preset": "jest-puppeteer",
